# doit-app

./: .gitignore  CMakeLists.txt  README.md
qml/: Main.qml  qml.qrc
qml/Components/: FocusItem.qml  TaskItem.qml
qml/Config/: ColorConfig.qml  GlobalConfig.qml  TextConfig.qml  qmldir
qml/Controls/: BasicButtonType.qml  Button.qml  CheckBoxType.qml  DrawerType.qml  PageType.qml  TextFieldType.qml
qml/Controls/TextTypes/: ButtonTextType.qml  CaptionTextType.qml  ListItemTitleType.qml
qml/Drawers/: MenuDrawer.qml
qml/Pages/: PageHome.qml  PageSetup.qml  PageStart.qml
qml/Popups/: TaskItemPopup.qml
resources/: resources.qrc
src/: doitapplication.cpp  doitapplication.h  main.cpp  pagecontroller.cpp  pagecontroller.h
src/TaskListModel/: task.cpp  task.h  tasklistmodel.cpp  tasklistmodel.h
